leverage the new getLogger( name) method